Fix for Bug7020.  Apparently ant includes its libs by default in the compile classpath (!?)

--- a/autocommon/build.xml
+++ b/autocommon/build.xml
@@ -62,6 +62,7 @@
         <javac srcdir="${autocommon.src.dir}"
                destdir="${autocommon.build.dir}"
                classpathref="autocommon.deps.classpath"
+               includeantruntime="false"
                target="1.5"
                source="1.5"
                debug="on">
