--- a/messaging/gt4.0-elastic/java/msgbridge/build.xml
+++ b/messaging/gt4.0-elastic/java/msgbridge/build.xml
@@ -76,6 +76,7 @@
         <javac srcdir="${nimbus.messaging.gt4_0-elastic.src.dir}"
                destdir="${nimbus.messaging.gt4_0-elastic.build.dest}"
                classpathref="nimbus.messaging.gt4_0-elastic.classpath"
+               includeantruntime="false"
                debug="on">
 
             <include name="**/*.java"/>
