--- a/messaging/gt4.0/java/common/build.xml
+++ b/messaging/gt4.0/java/common/build.xml
@@ -71,6 +71,7 @@
         <javac srcdir="${nimbus.messaging.gt4_0.common.src.dir}"
                destdir="${nimbus.messaging.gt4_0.common.build.dest}"
                classpathref="nimbus.messaging.gt4_0.common.classpath"
+               includeantruntime="false"
                debug="on">
 
             <include name="**/*.java"/>
