--- a/messaging/gt4.0/java/stubs/build.xml
+++ b/messaging/gt4.0/java/stubs/build.xml
@@ -227,6 +227,7 @@
 
         <javac srcdir="${vws.gt4_0.stubs.build.src.dir}"
                destdir="${vws.gt4_0.stubs.build.dest}"
+               includeantruntime="false"
                debug="on">
             
             <include name="**/*.java"/>
