--- a/messaging/query/java/source/build.xml
+++ b/messaging/query/java/source/build.xml
@@ -81,6 +81,7 @@
         <javac srcdir="${nimbus.messaging.query.src.dir}"
                destdir="${nimbus.messaging.query.build.dest}"
                classpathref="nimbus.messaging.query.classpath"
+               includeantruntime="false"
                debug="on">
 
             <include name="**/*.java"/>
