Fix for Bug 7031 except for client wsdd warning on broker, need input about broker independence

--- a/autoconfiguration/build.properties
+++ b/autoconfiguration/build.properties
@@ -32,6 +32,7 @@ nimbus.autoconfig.gt4_0.gar.build.schema.dir=${nimbus.autoconfig.gt4_0.gar.build
 nimbus.autoconfig.gt4_0.gar.build.docs.dir=${nimbus.autoconfig.gt4_0.gar.build.dir}/docs
 nimbus.autoconfig.gt4_0.gar.build.bin.dir=${nimbus.autoconfig.gt4_0.gar.build.dir}/bin
 
+nimbus.autoconfig.gt4_0.build.packages.xml=../scripts/lib/gt4.0/build/build-packages.xml
 
 ###############################
 # Dependencies from source tree
