--- a/autoconfiguration/build.xml
+++ b/autoconfiguration/build.xml
@@ -26,8 +26,7 @@
     <property environment="env"/>
     <property name="abs.deploy.dir" location="${env.GLOBUS_LOCATION}"/>
     <property name="gt4_0.lib.dir" location="${abs.deploy.dir}/lib"/>
-    <property name="build.packages"
-              location="${abs.deploy.dir}/share/globus_wsrf_common/build-packages.xml"/>
+    <property name="build.packages" location="${nimbus.autoconfig.gt4_0.build.packages.xml}"/>
 
 
     <!-- *******************************************************************
@@ -226,6 +225,9 @@
 
         <ant antfile="${build.packages}" target="makeGar">
 
+            <property name="forget.server-deploy.wsdd" value="x" />
+            <property name="forget.client-deploy.wsdd" value="x" />
+            <property name="forget.jndi-config-deploy.xml" value="x" />
             <reference refid="${garjars.id}"/>
             <reference refid="${garetc.id}"/>
             <reference refid="${garshare.id}"/>
