--- a/messaging/gt4.0-elastic/java/stubs/build.properties
+++ b/messaging/gt4.0-elastic/java/stubs/build.properties
@@ -20,6 +20,8 @@ vws.gt4_0-elastic.stubs.dist.dir=dist
 
 vws.gt4_0-elastic.stubs.build.tmpschemas.dir=build/tmpschemas
 
+vws.gt4_0-elastic.stubs.build.packages.xml=../../../../scripts/lib/gt4.0/build/build-packages.xml
+
 vws.gt4_0-elastic.stubs.package.name=nimbus-messaging-stubs-gt4.0-elastic
 vws.gt4_0-elastic.stubs.jar.name=${vws.gt4_0-elastic.stubs.package.name}.jar
 
