--- a/messaging/gt4.0/java/gar-builder/build.properties
+++ b/messaging/gt4.0/java/gar-builder/build.properties
@@ -48,6 +48,8 @@ nimbus.messaging.gt4_0.gar.build.schema.dir=${nimbus.messaging.gt4_0.gar.build.d
 nimbus.messaging.gt4_0.gar.build.docs.dir=${nimbus.messaging.gt4_0.gar.build.dir}/docs
 nimbus.messaging.gt4_0.gar.build.bin.dir=${nimbus.messaging.gt4_0.gar.build.dir}/bin
 
+# custom build-packages to bundle gar file
+nimbus.messaging.gt4_0.gar.build.packages.xml=../../../../scripts/lib/gt4.0/build/build-packages.xml
 
 ##############################################
 # Directories to copy into GAR's ETC directory
