--- a/messaging/gt4.0/java/stubs/build.properties
+++ b/messaging/gt4.0/java/stubs/build.properties
@@ -25,6 +25,8 @@ vws.gt4_0.stubs.dist.dir=dist
 
 vws.gt4_0.stubs.build.tmpschemas.dir=build/tmpschemas
 
+vws.gt4_0.stubs.build.packages.xml=../../../../scripts/lib/gt4.0/build/build-packages.xml
+
 vws.gt4_0.stubs.package.name=nimbus-messaging-stubs-gt4.0
 
 vws.gt4_0.stubs.jar.name=${vws.gt4_0.stubs.package.name}.jar
