--- a/service/client/java/source/build.properties
+++ b/service/client/java/source/build.properties
@@ -33,6 +33,8 @@ nimbus.client.gt4_0.gar.build.bin.dir=${nimbus.client.gt4_0.gar.build.dir}/bin
 nimbus.client.gt4_0.gar.build.schema.dir=${nimbus.client.gt4_0.gar.build.dir}/schema
 nimbus.client.gt4_0.gar.build.docs.dir=${nimbus.client.gt4_0.gar.build.dir}/docs
 
+nimbus.client.gt4_0.build.packages.xml=../../../../scripts/lib/gt4.0/build/build-packages.xml
+
 
 ###############################
 # Dependencies from source tree
