--- a/messaging/query/java/source/build.xml
+++ b/messaging/query/java/source/build.xml
@@ -74,6 +74,10 @@
               <include name="*.jar"/>
         </fileset>
 
+        <fileset dir="${nimbus.service.dist.dir}">
+              <include name="*.jar"/>
+        </fileset>
+
     </path>
 
     <target name="compile" depends="init">
