Modified so that virtualenv is used for installation.  dependecies are fetched via setuptools
docs need to be updated.

--- a/cumulus/etc/cumulus.ini.in
+++ b/cumulus/etc/cumulus.ini.in
@@ -10,7 +10,7 @@ calcMD5=True
 type=posix
 data_dir=@@INSTALLDIR@@/posixdata
 [security]
-type=@@SEC@@
+type=authz
 security_dir=@@INSTALLDIR@@/posixauth
 authzdb=@@INSTALLDIR@@/etc/authz.db
 
