--- a/cumulus/etc/env.sh.in
+++ b/cumulus/etc/env.sh.in
@@ -15,3 +15,5 @@ export CUMULUS_AUTHZ_DDL
 
 NIMBUS_AUTHZ_DB=@@INSTALLDIR@@/etc/authz.db
 export NIMBUS_AUTHZ_DB
+
+export PATH=$CUMULUS_HOME/bin:$PATH
