Stifled client wsdd warning in broker build script

--- a/ctx-broker/gar/build.properties
+++ b/ctx-broker/gar/build.properties
@@ -27,3 +27,6 @@ nimbus.java.compilerarg=-nowarn
 # jars
 nimbusctx.gt4_0.stubs.dist=../wsdl/stubs/dist
 nimbusctx.gt4_0.service.dist=../dist
+
+# custom build-packages to bundle gar file
+nimbus.messaging.gt4_0.gar.build.packages.xml=../../scripts/lib/gt4.0/build/build-packages.xml
