--- a/ctx-broker/gar/build.xml
+++ b/ctx-broker/gar/build.xml
@@ -19,7 +19,7 @@
     <property name="gt4_0.lib.dir"
               location="${abs.deploy.dir}/lib"/>
     <property name="build.packages"
-              location="${abs.deploy.dir}/share/globus_wsrf_common/build-packages.xml"/>
+              location="${nimbus.messaging.gt4_0.gar.build.packages.xml}"/>
     <property name="build.stubs"
               location="${abs.deploy.dir}/share/globus_wsrf_tools/build-stubs.xml"/>
 
@@ -148,6 +148,7 @@
 
     <target name="_dist" depends="check, etc_copies">
         <ant antfile="${build.packages}" target="makeGar">
+            <property name="forget.client-deploy.wsdd" value="x" />
             <reference refid="${garjars.id}"/>
             <reference refid="${garetc.id}"/>
             <reference refid="${garshare.id}"/>
