--- a/messaging/query/java/source/build.xml
+++ b/messaging/query/java/source/build.xml
@@ -78,6 +78,9 @@
               <include name="*.jar"/>
         </fileset>
 
+        <fileset dir="${nimbus.authzdb.dist.dir}">
+              <include name="*.jar"/>
+        </fileset>
     </path>
 
     <target name="compile" depends="init">
