--- a/service/service/java/source/build.properties
+++ b/service/service/java/source/build.properties
@@ -10,6 +10,7 @@ nimbus.service.main.lib.dir=../../../../lib/services
 
 # Compile dependencies from source tree
 nimbus.service.api.dist.dir=../../../../service-api/java/source/dist/
+nimbus.authz.dist.dir=../../../../authzdb/dist
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
