--- a/messaging/gt4.0-elastic/java/msgbridge/build.properties
+++ b/messaging/gt4.0-elastic/java/msgbridge/build.properties
@@ -11,6 +11,7 @@ nimbus.messaging.gt4_0-elastic.lib.dir=../../../../lib/services
 # Dependencies from source tree
 nimbus.messaging.gt4_0.common.dist.dir=../../../gt4.0/java/common/dist/
 nimbus.service.api.dist.dir=../../../../service-api/java/source/dist/
+nimbus.authzdb.dist.dir=../../../../authzdb/dist/
 
 # (gar is the 'dist' of stubs but we only want the jars... will be better later)
 vws.gt4_0.stubs.build.lib.dir=../stubs/build/lib/
