--- a/messaging/gt4.0-elastic/java/msgbridge/build.xml
+++ b/messaging/gt4.0-elastic/java/msgbridge/build.xml
@@ -69,6 +69,10 @@
         <fileset dir="${nimbus.service.api.dist.dir}">
               <include name="*.jar"/>
         </fileset>
+
+        <fileset dir="${nimbus.authzdb.dist.dir}">
+              <include name="*.jar"/>
+        </fileset>
     </path>
 
     <target name="compile" depends="init">
