--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -64,3 +64,6 @@ msgsinks.dir=/@WORKSPACE_PERSISTENCEDIR@/msg-sinks
 cumulus.home.dir=/@CUMULUSDIR@
 cumulus.authz.db=/@AUTHZDB@
 cumulus.repo.dir=/@CUMULUSDIR@/posixdata
+cumulus.host=@CUMULUSHOST@
+cumulus.repo.bucket=Repo
+cumulus.repo.prefix=VM
