getting cumrepo in spring files and simplifing the config

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -70,3 +70,6 @@ msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 cumulus.home.dir=/@CUMULUSDIR@
 cumulus.authz.db=/@AUTHZDB@
 cumulus.repo.dir=/@CUMULUSDIR@/posixdata
+cumulus.host=@CUMULUSHOST@
+cumulus.repo.bucket=Repo
+cumulus.repo.prefix=VM
