--- a/messaging/gt4.0/java/gar-builder/build.xml
+++ b/messaging/gt4.0/java/gar-builder/build.xml
@@ -107,6 +107,10 @@
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
+            <fileset dir="${nimbus.authzdbmodule.dist.dir}">
+                <include name="*.jar"/>
+                <include name="*LICENSE*"/>
+            </fileset>
             <fileset dir="${nimbus.service.main.dist.dir}">
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
