include authzdb jar into GAR libs

--- a/messaging/gt4.0/java/gar-builder/build.properties
+++ b/messaging/gt4.0/java/gar-builder/build.properties
@@ -15,6 +15,7 @@ nimbus.messaging.gt4_0.gar.build.dir=build
 nimbus.basedir=../../../..
 nimbus.service.main.basedir=${nimbus.basedir}/service/service/java/source/
 nimbus.service.api.basedir=${nimbus.basedir}/service-api/java/source
+nimbus.authzdbmodule.basedir=${nimbus.basedir}/authzdb
 nimbus.messaging.gt4_0.basedir=${nimbus.basedir}/messaging/gt4.0/java
 nimbus.messaging.gt4_0-elastic.basedir=${nimbus.basedir}/messaging/gt4.0-elastic/java
 nimbus.messaging.query.basedir=${nimbus.basedir}/messaging/query/java/source
@@ -75,6 +76,7 @@ nimbus.service.main.share.dir=${nimbus.service.main.basedir}/share
 
 nimbus.libservices.dir=../../../../lib/services
 nimbus.service.api.dist.dir=${nimbus.service.api.basedir}/dist
+nimbus.authzdbmodule.dist.dir=${nimbus.authzdbmodule.basedir}/dist
 nimbus.service.main.dist.dir=${nimbus.service.main.basedir}/dist
 nimbus.metadata-server.dist.dir=${nimbus.metadata-server.basedir}/dist
 nimbus.messaging.gt4_0.common.dist.dir=${nimbus.messaging.gt4_0.basedir}/common/dist/
