test pass (again AHHHH)

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -64,6 +64,6 @@ msgsinks.dir=/@WORKSPACE_PERSISTENCEDIR@/msg-sinks
 cumulus.home.dir=/@CUMULUSDIR@
 cumulus.authz.db=/@AUTHZDB@
 cumulus.repo.dir=/@CUMULUSDIR@/posixdata
-cumulus.host=@CUMULUSHOST@
-cumulus.repo.bucket=Repo
+cumulus.host=@CUMULUS_HOST@
+cumulus.repo.bucket=@CUMULUS_REPO_BUCKET@
 cumulus.repo.prefix=VM
