Clarify the dhcp interface selection.  See commit msg for rant.
Clarify the dhcp interface selection process so proper ebtables rules can be
chosen... on one hand it is not hard if you understand Xen networking, but
on the other hand this is still a typical impediment to installing Nimbus.
This can be done in an entirely different way so we don't force people to
understand such details (although I would personally hope a 'serious' long
term Xen VM provider will).  More on alternative solutions later."

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -12,7 +12,7 @@
 # The name of the bridge to use for every VM NIC without a match in the
 # "bridges" section below.  If blank or missing, there will be no default.
 
-default: virbr0
+default: xenbr0
 
 
 [bridges]
@@ -40,11 +40,13 @@ default: virbr0
 # After a bridge is chosen for the VM's NIC, the program needs to know how to
 # let packets through to DHCPd (normally network packets without an IP source
 # address would be rejected).
+#
 # Directing the request to a specific interface only also helps prevent DHCP
 # requests from being broadcast to other VMs or the real network.
 
 # The DHPCd process will be listening for requests on a particular interface
-# in domain 0.  This will be something like 'eth0' usually for Xen.
+# in domain 0.  This will be something like "eth0" usually for Xen.  This
+# interface is connected to the guests with something called "vif0.0" usually.
 #
 # This diagram may help explain: http://tinyurl.com/36n9twq (xensource.com)
 # 
@@ -52,13 +54,38 @@ default: virbr0
 # is bridged to.  The configurations in this section ("dhcp-bridges") allow
 # the program to lookup which bridge a VM NIC is bridged to and get the
 # matching DHCPd interface so that security rules can be constructed properly.
-
-# The bridgename for the VM NIC is chosen above.  Here is where you map it to
-# the DHCPd interface to use.
 #
-# BRIDGENAME-CHOSEN: DHCPD-LISTENING-INTERFACE
+# The bridgename for the VM NIC is chosen using the configurations in the
+# "[defaultbridge]" and "[bridges]" section above.  These configurations are
+# where you map it to the domain 0 DHCPd interface to send packets to.
+#
+# Try this command to see what the network setup is like: "brctl show"
+#
+# Sample output:
+#
+# bridge name     bridge id               STP enabled     interfaces
+# xenbr0          8000.feffffffffff       no              peth0
+#                                                        vif0.0
+#
+#
+# This is telling me that "vif0.0" is bridged to the real physical NIC
+# "peth0"  In Xen the "vif0*" interfaces are the representation of domain 0
+# interfaces.  So here, DHCPd is listening on my "eth0" which is represented
+# as "vif0.0".  So when "vif1.0" shows up on this bridge when the guest VM
+# starts, "vif0.0" is the place I want DHCP packets to go.
 
-xenbr0: eth0
+# This all usually makes sense once you remember that domain 0 is also a VM.
+# When you run "ifconfig" in domain 0 it is confusing since you are seeing
+# the "eth0" interface which is "inside" the guest VM (domain 0 is a guest
+# VM) as well as "vif0.0" which is how guest packets arrive to be dealt
+# with (using iptables, ebtables, bridging, etc.) before hitting the real
+# LAN via "peth0"
+# 
+#
+#
+# BRIDGENAME-CHOSEN-FOR-VM: DHCPD-LISTENING-INTERFACE
+
+xenbr0: vif0.0
 
 
 # Also note that for each network DHPCd will serve, a "subnet" configuration
