nice stubs for the 'web' library

--- a/cumulus/src/etc/env.sh.in
+++ b/cumulus/src/etc/env.sh.in
@@ -1,9 +1,10 @@
 #!/bin/sh
 
+pypath="@INSTALLDIR@/lib:@INSTALLDIR@/lib/python2.5/site-packages/"
 if [ "X${PYTHONPATH}" == "X" ]; then
-    PYTHONPATH=@INSTALLDIR@
+    PYTHONPATH=$pypath
 else
-    PYTHONPATH=@INSTALLDIR@:${PYTHONPATH}
+    PYTHONPATH=$pypath:${PYTHONPATH}
 fi
 export PYTHONPATH
 
