added option for selecting different termination policies, also added new termination policy to select the backfill VM that has been running for the least amount of time (now the default)

--- a/service/service/java/source/etc/workspace-service/backfill.conf
+++ b/service/service/java/source/etc/workspace-service/backfill.conf
@@ -73,6 +73,26 @@ memory.MB=64
 duration.seconds=604800
 
 
+# INSTANCE TERMINATION POLICY
+#
+# The instance termination policy specifies the mechanism that will be used
+# when selecting a backfill VM to terminate in order to satisfy a user
+# request.
+#
+# Options:
+#
+# - ANY             this will pick any VM to terminate, it doesn't consider
+#                   any factors (such as time running) when deciding, it
+#                   simply grabs the next VM instance out of the hash table
+#
+# - MOST_RECENT     this will pick the VM that has been running for the least
+#                   amount of time
+#
+# The default is MOST_RECENT.
+
+termination.policy=MOST_RECENT
+
+
 # INSTANCE RETRY PERIOD
 #
 # Instance retry period is the amount of time (in seconds) the backfill timer
