--- a/cumulus/conf/configure.ac
+++ b/cumulus/conf/configure.ac
@@ -13,11 +13,20 @@ AC_PATH_PROG(PYTHON,python2.5,no)
 if test "$PYTHON" == no ; then
     AC_MSG_ERROR(Cannot find python2.5.)
 fi
+
+AC_ARG_WITH([ve],
+            [AS_HELP_STRING([--with-ve],
+              [specify the virtual env directory.  Default is prefix])],
+            [with_ve=$withval],
+            [with_ve=$prefix])
+
+VEDIR=$with_ve          
 # must verify cumulus and pynimbusauthz are installed
 HOSTNAME=`hostname`
 INSTALLDIR=$prefix
 AC_SUBST(INSTALLDIR)
 AC_SUBST(HOSTNAME)
+AC_SUBST(VEDIR)
 
 
 AC_OUTPUT(Makefile 
