--- a/cumulus/conf/etc/env.sh.in
+++ b/cumulus/conf/etc/env.sh.in
@@ -1,12 +1,15 @@
 #!/bin/sh
 
-pypath="@INSTALLDIR@/lib:@INSTALLDIR@/lib/python2.5/site-packages/"
+pypath="@VEDIR@/lib:@VEDIR@/lib/@PYVER@/site-packages/"
 if [ "X${PYTHONPATH}" == "X" ]; then
     PYTHONPATH=$pypath
 else
     PYTHONPATH=$pypath:${PYTHONPATH}
 fi
 export PYTHONPATH
+
+CUMULUS_VE_HOME=@VEDIR@
+export CUMULUS_VE_HOME
 
 CUMULUS_HOME=@INSTALLDIR@
 export CUMULUS_HOME
