adding both 2.5 and 2.6 to the cumulus path.  need a better solution

--- a/cumulus/conf/etc/env.sh.in
+++ b/cumulus/conf/etc/env.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-pypath="@VEDIR@/lib:@VEDIR@/lib/@PYVER@/site-packages/"
+pypath="@VEDIR@/lib:@VEDIR@/lib/python2.5/site-packages/:@VEDIR@/lib/python2.6/site-packages/"
 if [ "X${PYTHONPATH}" == "X" ]; then
     PYTHONPATH=$pypath
 else
