fixed cumulus python path ugliness

--- a/cumulus/conf/configure.ac
+++ b/cumulus/conf/configure.ac
@@ -21,13 +21,20 @@ AC_ARG_WITH([ve],
             [with_ve=$prefix])
 
 VEDIR=$with_ve          
+PYVERSUB=`$VEDIR/bin/python -c 'import sys; print "python%d.%d" % (sys.version_info[[0]], sys.version_info[[1]]); sys.exit(0);'`
 # must verify cumulus and pynimbusauthz are installed
 HOSTNAME=`hostname`
 INSTALLDIR=$prefix
 AC_SUBST(INSTALLDIR)
 AC_SUBST(HOSTNAME)
 AC_SUBST(VEDIR)
+AC_SUBST(PYVERSUB)
 
+echo "+++++++++++++++++++++++++"
+echo $PYVERSUB
+$VEDIR/bin/python --version
+$VEDIR/bin/python -c 'import sys; print "python%d.%d" % (sys.version_info[[0]], sys.version_info[[1]]); sys.exit(0);'
+echo "+++++++++++++++++++++++++"
 
 AC_OUTPUT(Makefile 
     etc/cumulus.ini 
