--- a/cumulus/conf/Makefile.in
+++ b/cumulus/conf/Makefile.in
@@ -105,6 +105,7 @@ PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PYTHON = @PYTHON@
+PYVERSUB = @PYVERSUB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 SQLITE = @SQLITE@
