HDFS propagation support will not be an option by default

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -34,4 +34,11 @@ scp: /usr/bin/scp
 # Hadoop Distributed File System (hdfs)
 # Make this point to the hadoop executable of your install.  Enviroment 
 # variables of the form $var and ${var} will be expanded if possible.
-hdfs: /usr/bin/hadoop
+#
+# Advanced feature, uncomment to enable.
+#
+# When enabled, the user must use hdfs:// URLs in the propagation request
+# which will currently bypass the notion of external/internal namespaces
+# for files that Nimbus 2.5 introduces.
+
+#hdfs: /usr/bin/hadoop
