Manual merge of Patrick Armstrong HTTP propagation contribution 07ade6362e5525fb2a8ab17ba172fd7937ad4efd
First try at backend http support (needs better exception handling)

Conflicts:

	control/src/python/workspacecontrol/defaults/imageprocurement/propagate_common.py

Also added a configuration to enable http usage.

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -31,6 +31,11 @@ scp: /usr/bin/scp
 #scp_user_override: false
 
 
+# Set this to 'true' to enable http based propagation.  The service node
+# has a configuration for the allowed hostnames that may be pulled from.
+http: false
+
+
 # Hadoop Distributed File System (hdfs)
 # Make this point to the hadoop executable of your install.  Enviroment 
 # variables of the form $var and ${var} will be expanded if possible.
