--- a/cumulus/conf/configure.ac
+++ b/cumulus/conf/configure.ac
@@ -4,14 +4,9 @@ AM_INIT_AUTOMAKE
 
 AC_CHECK_HEADERS(openssl/ssl.h, [], [AC_MSG_ERROR(cannot find openssl headers)])
 
-
 AC_PATH_PROG(SQLITE,sqlite3,no)
 if test "$SQLITE" == no ; then
     AC_MSG_ERROR(Cannot find sqlite3.)
-fi
-AC_PATH_PROG(PYTHON,python2.5,no)
-if test "$PYTHON" == no ; then
-    AC_MSG_ERROR(Cannot find python2.5.)
 fi
 
 AC_ARG_WITH([ve],
@@ -19,6 +14,11 @@ AC_ARG_WITH([ve],
               [specify the virtual env directory.  Default is prefix])],
             [with_ve=$withval],
             [with_ve=$prefix])
+
+AUTHZDB=$prefix/etc/authz.db
+if test "X$CUMULUS_AUTHZDB" != "X" ; then
+    AUTHZDB=$CUMULUS_AUTHZDB
+fi
 
 VEDIR=$with_ve          
 PYVERSUB=`$VEDIR/bin/python -c 'import sys; print "python%d.%d" % (sys.version_info[[0]], sys.version_info[[1]]); sys.exit(0);'`
@@ -29,12 +29,7 @@ AC_SUBST(INSTALLDIR)
 AC_SUBST(HOSTNAME)
 AC_SUBST(VEDIR)
 AC_SUBST(PYVERSUB)
-
-echo "+++++++++++++++++++++++++"
-echo $PYVERSUB
-$VEDIR/bin/python --version
-$VEDIR/bin/python -c 'import sys; print "python%d.%d" % (sys.version_info[[0]], sys.version_info[[1]]); sys.exit(0);'
-echo "+++++++++++++++++++++++++"
+AC_SUBST(AUTHZDB)
 
 AC_OUTPUT(Makefile 
     etc/cumulus.ini 
