--- a/cumulus/conf/Makefile.in
+++ b/cumulus/conf/Makefile.in
@@ -64,6 +64,7 @@ distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
+AUTHZDB = @AUTHZDB@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -104,7 +105,6 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PYTHON = @PYTHON@
 PYVERSUB = @PYVERSUB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -501,7 +501,7 @@ install: predest
 	cp $(cumulus_src_dir)/etc/cumulus.ini ~/.nimbus
 	cp -r $(cumulus_src_dir)/etc $(cumulus_dst_dir)
 	cp -r $(cumulus_src_dir)/etc/env.sh $(cumulus_dst_dir)
-	$(SQLITE) -batch $(cumulus_dst_dir)/etc/authz.db < $(cumulus_src_dir)/etc/acl.sql
+	$(SQLITE) $(AUTHZDB) < $(cumulus_src_dir)/etc/acl.sql
 	echo "done"
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
