enhancement 7065: better performing blankspace: physical partition leases

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -34,3 +34,57 @@ securelocaldir: secureimages
 #    be disabled
 
 blankcreate: blankcreate.sh
+
+
+
+# -------------------------------------------------------------------------
+
+[tmplease]
+
+# *Experimental*
+#
+# Enabling this preliminary feature lets you configure a list of physical
+# partitions to "lease" to incoming VMs.  Only works with Xen currently.
+#
+# *WARNING* Configure the list of physical partitions carefully.  They are
+# formatted every time they are used!
+#
+# The partition list path is configured directly at the top of the
+# "tmp-lease-alter.py" script since it is sensitive information that
+# should not be passed in by an unprivileged user.
+
+enabled: true
+
+
+# This is the partition to 'present' to every VM for tmp space if this
+# feature is enabled.  Must use the 4 letter version, e.g. "sda2"
+
+vmpartition: sda2
+
+
+# Control if you want the program to fail entirely if a request already
+# has a partition target that would make the 'vmpartition' injection
+# impossible.  When set to 'true', it will reject requests.  Any other
+# setting and it will just NOT cause the temp space to be leased or mounted,
+# it will just log a warning.
+
+fail_if_present: false
+
+
+# This is called via sudo to adjust the physical partitions if this feature
+# is enabled.
+#
+# It is called under sudo.  A relevant entry for it must be configured in the
+# sudoers file, for example:
+#
+# nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/tmp-lease.sh
+#
+# Because it is called under sudo, that program, these conf files, and all
+# enclosing directories should be owned by root.
+#
+# If this setting is a relative path, it will be resolved from the
+# workspace-control specific libexec directory (see "dirs.conf")
+
+tmplease: tmp-lease.sh
+
+
