--- a/control/etc/workspace-control/sudo.conf
+++ b/control/etc/workspace-control/sudo.conf
@@ -13,7 +13,6 @@ sudo: /usr/bin/sudo
 # Corresponding entries must be in the sudoers file, e.g:
 # 
 # nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/mount-alter.sh
-# nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/dhcp-config.sh
 # nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/xen-ebtables-config.sh
 # 
 # ...where "nimbus" (on the left) is the privileged account that runs the
@@ -22,6 +21,12 @@ sudo: /usr/bin/sudo
 # Note "xen-ebtables-config.sh" vs. "kvm-ebtables-config.sh"
 #
 # That configuration task is *NOT* handled by any installer script.
+#
+#
+# OPTIONAL rules for non-default features:
+#
+# nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/dhcp-config.sh
+# nimbus ALL=(root) NOPASSWD: /opt/nimbus/libexec/workspace-control/tmp-lease.sh
 #
 # For information about sudo, see:
 #     http://www.gratisoft.us/sudo/
@@ -36,15 +41,19 @@ sudo: /usr/bin/sudo
 # The following is a permissions example for one of the programs, the same thing
 # applies to each program called under sudo.
 # 
-# "/opt/nimbus/libexec/workspace-control/dhcp-config.sh" should be owned by root
+# "/opt/nimbus/libexec/workspace-control/mount-alter.sh" should be owned by root
 # and chmod 700
 #
-# Since we call it via sudo, the default dhcpconfig value
-# "/opt/nimbus/libexec/workspace-control/dhcp-config.sh" implies that not just
+# Since we call it via sudo, the default mounttool configuration
+# "/opt/nimbus/libexec/workspace-control/mount-alter.sh" implies that not just
 # the script but also the enclosing directories /opt, /opt/nimbus/,
 # /opt/nimbus/libexec, and /opt/nimbus/libexec/workspace-control are not
 # writeable by any account but root. 
 #
 # All of these configuration files and the enclosing directories should also
 # be writeable by no account but root.
+#
+# Otherwise, the unprivileged user could switch the script (renaming things
+# is a *directory* permission in Unix).
+#
 ################################################################################
