Update bin/tmp -> tmp in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,5 @@ web/src/python/nimbusweb/portal/generated_settings.py
 web/var/
 control/var/workspace-control/logs/wclog*
 derby.log
-bin/tmp/
+tmp/
 workspace.persistence.conf
-
